--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "axios": "^0.18.0",
     "html2canvas": "^1.0.0-alpha.12",
     "http-proxy": "^1.17.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {}
 }
