--- a/problems/case7/package.json
+++ b/problems/case7/package.json
@@ -2,13 +2,14 @@
 	"scripts": {
 		"build": "webpack  --mode development --config webpack.config.prod.js",
 		"str": "node_modules/.bin/webpack app/main.js public/bundle.js --mode development",
-		"server": "webpack-dev-server --config webpack.config.dev.js"
+		"dev": "webpack-dev-server --config webpack.config.dev.js"
 	},
 	"dependencies": {
 		"webpack": "^4.29.6"
 	},
 	"devDependencies": {
 		"css-loader": "^2.1.1",
+		"html-webpack-plugin": "^3.2.0",
 		"style-loader": "^0.23.1",
 		"url-loader": "^1.1.2",
 		"webpack-cli": "^3.3.0",
