--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "axios": "^0.18.0",
     "html2canvas": "^1.0.0-alpha.12",
     "http-proxy": "^1.17.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.2"
+    "webpack": "^4.30.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.6"
+  }
 }
