--- a/problems/case14/package.json
+++ b/problems/case14/package.json
@@ -4,24 +4,25 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "bc": "webpack --config webpack.client.config.js --mode=development",
-    "bs": "webpack --config webpack.server.config.js --mode=development",
+    "bc": "webpack --config build/webpack.client.config.js",
+    "bs": "webpack --config build/webpack.server.config.js",
     "server": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.2",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.0",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.6.2",
     "vue-router": "^3.0.6",
-    "vue-server-renderer": "^2.6.10",
+    "vue-server-renderer": "^2.5.13",
     "vue-ssr-webpack-plugin": "^3.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-cli": "^3.3.2"
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.10.0",
+    "webpack-merge": "^4.2.1"
   },
-  "dependencies": {
-    "webpack": "^4.30.0"
-  }
+  "dependencies": {}
 }
