--- a/problems/case14/package.json
+++ b/problems/case14/package.json
@@ -23,6 +23,7 @@
     "vue-server-renderer": "^2.5.13",
     "vue-ssr-webpack-plugin": "^3.0.0",
     "vue-template-compiler": "^2.5.13",
+    "vuex": "^3.1.1",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.2.1"
   },
