--- a/problems/case7/package.json
+++ b/problems/case7/package.json
@@ -8,11 +8,13 @@
 		"webpack": "^4.29.6"
 	},
 	"devDependencies": {
+		"clean-webpack-plugin": "^2.0.2",
 		"css-loader": "^2.1.1",
 		"html-webpack-plugin": "^3.2.0",
 		"style-loader": "^0.23.1",
 		"url-loader": "^1.1.2",
 		"webpack-cli": "^3.3.0",
-		"webpack-dev-server": "^3.2.1"
+		"webpack-dev-server": "^3.2.1",
+		"webpack-merge": "^4.2.1"
 	}
 }
