--- a/problems/case0.7/package.json
+++ b/problems/case0.7/package.json
@@ -11,6 +11,8 @@
 		"clean-webpack-plugin": "^2.0.2",
 		"css-loader": "^2.1.1",
 		"html-webpack-plugin": "^3.2.0",
+		"less": "^3.10.3",
+		"less-loader": "^5.0.0",
 		"style-loader": "^0.23.1",
 		"url-loader": "^1.1.2",
 		"webpack-cli": "^3.3.0",
