--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "webpack": "^4.30.0"
   },
   "devDependencies": {
+    "animejs": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
