--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "axios": "^0.18.0",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "^1.0.0-rc.1",
     "http-proxy": "^1.17.0",
     "webpack": "^4.30.0"
   },
   "devDependencies": {
     "animejs": "^3.1.0",
+    "clipboard": "^2.0.6",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
