--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "animejs": "^3.1.0",
     "clipboard": "^2.0.6",
+    "element-ui": "^2.13.0",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
