--- a/problems/case0.7/package.json
+++ b/problems/case0.7/package.json
@@ -5,6 +5,12 @@
 		"dev": "webpack-dev-server --config webpack.config.dev.js"
 	},
 	"dependencies": {
+		"@babel/core": "^7.12.10",
+		"@babel/plugin-transform-runtime": "^7.5.0",
+		"@babel/preset-env": "^7.5.0",
+		"@babel/runtime": "^7.12.5",
+		"babel-loader": "^8.2.2",
+		"babel-plugin-component": "^1.1.1",
 		"webpack": "^4.29.6"
 	},
 	"devDependencies": {
