--- a/problems/case0.7/package.json
+++ b/problems/case0.7/package.json
@@ -11,11 +11,13 @@
 		"@babel/runtime": "^7.12.5",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-component": "^1.1.1",
+		"happypack": "^5.0.1",
 		"webpack": "^4.29.6"
 	},
 	"devDependencies": {
 		"clean-webpack-plugin": "^2.0.2",
 		"css-loader": "^2.1.1",
+		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
