--- a/problems/case0.7/package.json
+++ b/problems/case0.7/package.json
@@ -1,8 +1,11 @@
 {
 	"scripts": {
-		"build": "webpack  --mode development --config webpack.config.prod.js",
+		"build": "webpack  --mode production --config webpack.config.prod.js",
+		"build:dev": "webpack  --mode development --config webpack.config.prod.js",
+		"build:watch": "webpack  --mode development --config webpack.config.prod.js --watch",
 		"str": "node_modules/.bin/webpack app/main.js public/bundle.js --mode development",
-		"dev": "webpack-dev-server --config webpack.config.dev.js"
+		"dev": "webpack-dev-server --mode development --config webpack.config.dev.js",
+		"server": "node server.js"
 	},
 	"dependencies": {
 		"@babel/core": "^7.12.10",
@@ -17,6 +20,7 @@
 	"devDependencies": {
 		"clean-webpack-plugin": "^2.0.2",
 		"css-loader": "^2.1.1",
+		"express": "^4.17.1",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.10.3",
@@ -24,6 +28,7 @@
 		"style-loader": "^0.23.1",
 		"url-loader": "^1.1.2",
 		"webpack-cli": "^3.3.0",
+		"webpack-dev-middleware": "^4.0.2",
 		"webpack-dev-server": "^3.2.1",
 		"webpack-merge": "^4.2.1"
 	}
