--- a/problems/case0.7/package.json
+++ b/problems/case0.7/package.json
@@ -25,6 +25,7 @@
 		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
+		"lodash": "^4.17.20",
 		"style-loader": "^0.23.1",
 		"url-loader": "^1.1.2",
 		"webpack-cli": "^3.3.0",
