--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.17.1",
     "html2canvas": "^1.0.0-rc.1",
     "http-proxy": "^1.17.0",
     "webpack": "^4.30.0"
