feat: 增加基础示例

--- a/problems/case0.7/package.json
+++ b/problems/case0.7/package.json
@@ -1,6 +1,8 @@
 {
+	"type": "modules",
 	"scripts": {
 		"build": "webpack  --mode production --config webpack.config.prod.js",
+		"build:test": "webpack --mode development --config webpack.config.test.js",
 		"build:dev": "webpack  --mode development --config webpack.config.prod.js",
 		"build:watch": "webpack  --mode development --config webpack.config.prod.js --watch",
 		"str": "node_modules/.bin/webpack app/main.js public/bundle.js --mode development",
