--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "webpack": "^4.30.0"
   },
   "devDependencies": {
+    "@babel/generator": "^7.17.7",
+    "@babel/parser": "^7.17.8",
+    "@babel/traverse": "^7.17.3",
     "animejs": "^3.1.0",
     "clipboard": "^2.0.6",
     "element-ui": "^2.13.0",
