--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "webpack": "^4.30.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@babel/generator": "^7.17.7",
     "@babel/parser": "^7.17.8",
     "@babel/traverse": "^7.17.3",
